// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fretboard component with skinType strings, snapshot 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": "white",
      "dimensions": Object {
        "nutWidth": 0.75,
        "openWidth": 10,
        "stringHeight": 30,
      },
      "fontSize": 10,
      "octaveMap": Object {
        "2": "rgb(95, 190, 244)",
        "3": "rgb(135, 219, 244)",
        "4": "rgb(205, 240, 247)",
        "5": "rgb(242, 246, 247)",
      },
      "skins": Object {
        "strings": Object {
          "highlightBorder": "1px solid gray",
          "highlightSize": 85,
        },
      },
      "statusMap": Object {
        "selected": "rgb(255, 252, 127)",
        "unselected": "white",
      },
    }
  }
>
  <styled.div
    height={210}
  >
    <styled.div
      height={180}
    >
      <ViewPortMain>
        <OpenPosition
          tuning={
            Array [
              "E2",
              "A2",
              "D3",
              "G3",
              "B3",
              "E4",
            ]
          }
          width={10}
        />
        <Nut
          offset={10}
          skinType="strings"
          tuning={
            Array [
              "E2",
              "A2",
              "D3",
              "G3",
              "B3",
              "E4",
            ]
          }
          width={0.75}
        />
        <Board
          nrOfFrets={12}
          offset={10.75}
          skinType="strings"
          tuning={
            Array [
              "E2",
              "A2",
              "D3",
              "G3",
              "B3",
              "E4",
            ]
          }
          width={89.25}
        />
      </ViewPortMain>
      <PositionLabels
        nrOfFrets={12}
        nutWidth={0.75}
        openWidth={10}
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Fretboard component, snapshot 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": "white",
      "dimensions": Object {
        "nutWidth": 0.75,
        "openWidth": 10,
        "stringHeight": 30,
      },
      "fontSize": 10,
      "octaveMap": Object {
        "2": "rgb(95, 190, 244)",
        "3": "rgb(135, 219, 244)",
        "4": "rgb(205, 240, 247)",
        "5": "rgb(242, 246, 247)",
      },
      "skins": Object {
        "strings": Object {
          "highlightBorder": "1px solid gray",
          "highlightSize": 85,
        },
      },
      "statusMap": Object {
        "selected": "rgb(255, 252, 127)",
        "unselected": "white",
      },
    }
  }
>
  <styled.div
    height={210}
  >
    <styled.div
      height={180}
    >
      <ViewPortMain>
        <OpenPosition
          tuning={
            Array [
              "E2",
              "A2",
              "D3",
              "G3",
              "B3",
              "E4",
            ]
          }
          width={10}
        />
        <Nut
          offset={10}
          skinType="boxes"
          tuning={
            Array [
              "E2",
              "A2",
              "D3",
              "G3",
              "B3",
              "E4",
            ]
          }
          width={0.75}
        />
        <Board
          nrOfFrets={12}
          offset={10.75}
          skinType="boxes"
          tuning={
            Array [
              "E2",
              "A2",
              "D3",
              "G3",
              "B3",
              "E4",
            ]
          }
          width={89.25}
        />
      </ViewPortMain>
      <PositionLabels
        nrOfFrets={12}
        nutWidth={0.75}
        openWidth={10}
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`should return component w/out positionLabels 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": "white",
      "dimensions": Object {
        "nutWidth": 0.75,
        "openWidth": 10,
        "stringHeight": 30,
      },
      "fontSize": 10,
      "octaveMap": Object {
        "2": "rgb(95, 190, 244)",
        "3": "rgb(135, 219, 244)",
        "4": "rgb(205, 240, 247)",
        "5": "rgb(242, 246, 247)",
      },
      "skins": Object {
        "strings": Object {
          "highlightBorder": "1px solid gray",
          "highlightSize": 85,
        },
      },
      "statusMap": Object {
        "selected": "rgb(255, 252, 127)",
        "unselected": "white",
      },
    }
  }
>
  <styled.div
    height={180}
  >
    <styled.div
      height={180}
    >
      <ViewPortMain>
        <OpenPosition
          tuning={
            Array [
              "E2",
              "A2",
              "D3",
              "G3",
              "B3",
              "E4",
            ]
          }
          width={10}
        />
        <Nut
          offset={10}
          skinType="boxes"
          tuning={
            Array [
              "E2",
              "A2",
              "D3",
              "G3",
              "B3",
              "E4",
            ]
          }
          width={0.75}
        />
        <Board
          nrOfFrets={12}
          offset={10.75}
          skinType="boxes"
          tuning={
            Array [
              "E2",
              "A2",
              "D3",
              "G3",
              "B3",
              "E4",
            ]
          }
          width={89.25}
        />
      </ViewPortMain>
    </styled.div>
  </styled.div>
</ThemeProvider>
`;
